# firstpass

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  SPEC.md  deny.toml  dist-workspace.toml  firstpass.example.toml  llms.txt
.github/workflows/: audit.yml  ci.yml  crates-io.yml  docker.yml  npm-publish.yml  pages.yml  provider-smoke.yml  python-wheels.yml  release.yml
crates/firstpass-bench/: Cargo.toml
crates/firstpass-bench/src/: ablation.rs  coding.rs  conformal.rs  dataset.rs  elastic.rs  lib.rs  live.rs  main.rs  metrics.rs  policy.rs  report.rs  sandbox.rs  sim.rs  stats.rs
crates/firstpass-core/: Cargo.toml
crates/firstpass-core/src/: config.rs  conformal.rs  cost.rs  error.rs  features.rs  hashchain.rs  lib.rs  ltt.rs  predictor.rs  trace.rs  verdict.rs
crates/firstpass-proxy/: Cargo.toml  pyproject.toml
crates/firstpass-proxy/examples/: demo.rs
crates/firstpass-proxy/src/: bandit.rs  calibrate.rs  cli.rs  config.rs  consistency.rs  error.rs  gate.rs  judge.rs  key_custody.rs  lib.rs  main.rs  mcp.rs  metrics.rs  onboard.rs  ope.rs  provider.rs  proxy.rs  router.rs  run.rs  store.rs  subprocess.rs  tenant_auth.rs  upstream.rs
crates/firstpass-proxy/tests/: end_to_end.rs  observe_loop.rs
docs/: ga-handoff.md  index.html  roadmap.md  threat-model.md  usage.html
docs/adr/: 0001-hosted-ga-architecture.md  0002-bench-code-execution-sandbox.md  0003-production-ga-readiness.md  0004-hosted-multitenant-plane.md  0005-enforce-through-tools.md  0006-provider-auth-extensibility.md  0007-thompson-start-rung.md  0008-elastic-verification.md
docs/assets/: docs.css  docs.js  site.css
docs/benchmarks/: README.md  elastic-validation.txt  mbpp-live-base.txt  probe-study-mbpp.txt
docs/compliance/: receipt-audit.md  slo.md  soc2-controls.md
docs/guide/: api.html  benchmarks.html  cli.html  configuration.html  elastic-verification.html  gates.html  guarantee.html  how-it-works.html  index.html  providers.html  quickstart.html  r101-01-one-request.html  r101-02-token-meter.html  r101-03-multi-turn.html  r101-04-tools.html  r101-05-caching.html  r101-06-client-shapes.html  r101-07-claude-code-session.html  r101-08-streaming.html  r101-09-structured-outputs.html  r101-10-images.html  r101-11-mcp.html  r101-12-errors.html  r101-13-firstpass.html  receipts.html  request-flow.html  requests-101.html  routing.html
docs/observability/: grafana-firstpass.json
docs/runbooks/: release.md  soak.md
docs/security/: audit-packet.md
scripts/: provider-smoke.sh
specs/: imperfect-gate-benchmark.md
