[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0-rc.1"
edition = "2024"
rust-version = "1.93"
license = "Apache-2.0"
repository = "https://github.com/dshakes/firstpass"
homepage = "https://dshakes.github.io/firstpass"
authors = ["Firstpass"]

[workspace.dependencies]
# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
# Identity, hashing, time
uuid = { version = "1", features = ["v7", "serde"] }
sha2 = "0.10"
hex = "0.4"
jiff = { version = "0.2", features = ["serde"] }
# Errors
thiserror = "2"
async-trait = "0.1"

# Proxy: HTTP server/client, storage, async runtime, tracing
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "signal", "process", "io-util", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
bytes = "1"
tower = { version = "0.5", features = ["limit", "util"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }

# Internal crates
firstpass-core = { path = "crates/firstpass-core", version = "0.1.0-rc.1" }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Deny footguns across the workspace. Prod-grade: no silent unwrap-in-lib slop.
[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
dbg_macro = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
