[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.6"
edition = "2024"
rust-version = "1.93"
license = "Apache-2.0"
repository = "https://github.com/dshakes/firstpass"
homepage = "https://dshakes.github.io/firstpass"
authors = ["Firstpass"]

[workspace.dependencies]
# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
# Identity, hashing, time
uuid = { version = "1", features = ["v7", "serde"] }
sha2 = "0.10"
hex = "0.4"
# AEAD for at-rest key custody (ADR 0004 §D5). Default features include `getrandom`,
# which provides the OS ambient CSPRNG (`SysRng`) used to generate per-message nonces.
aes-gcm = "0.11"
jiff = { version = "0.2", features = ["serde"] }
# Errors
thiserror = "2"
async-trait = "0.1"
# Multi-tenant auth: Argon2id password hashing with constant-time verification (ADR 0004 §D1).
argon2 = { version = "0.5", features = ["std"] }

# Proxy: HTTP server/client, storage, async runtime, tracing
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "signal", "process", "io-util", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
bytes = "1"
tower = { version = "0.5", features = ["limit", "util"] }
# Per-tenant request rate limiting (ADR 0004 §D6): a vetted, keyed token-bucket limiter.
governor = "0.8"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
# Bespoke provider auth (ADR 0006 P2/P3): AWS SigV4 request signing (Bedrock), GCP OAuth (Vertex).
# Delegated to maintained crates — never hand-rolled signing/token crypto.
# Pinned below current latest: newer aws-sigv4/aws-credential-types/aws-smithy-runtime-api
# releases bump their declared MSRV past this workspace's rust-version (1.93); these are the
# newest releases that still build on it.
aws-sigv4 = { version = "=1.4.5", features = ["sign-http", "http1"] }
aws-credential-types = "=1.2.14"
aws-smithy-runtime-api = "=1.12.3"
gcp_auth = "0.12"
http = "1"

# Internal crates
firstpass-core = { path = "crates/firstpass-core", version = "0.1.6" }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Deny footguns across the workspace. Prod-grade: no silent unwrap-in-lib slop.
[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
dbg_macro = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
