[package]
name = "firstpass-core"
description = "Firstpass domain contract: trace schema, verdicts, features, tamper-evident hash chain, routing config, and cost model. Pure — no I/O."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
documentation = "https://docs.rs/firstpass-core"
keywords = ["llm", "routing", "audit", "verification"]
categories = ["data-structures"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
jiff.workspace = true
thiserror.workspace = true

[lints]
workspace = true
