[package]
name = "firstpass-proxy"
description = "Firstpass observe-mode HTTP proxy: a drop-in base_url in front of Anthropic that forwards requests unchanged and records a tamper-evident audit trace."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "firstpass-proxy"
path = "src/main.rs"

[dependencies]
firstpass-core.workspace = true
serde.workspace = true
serde_json.workspace = true
jiff.workspace = true
uuid.workspace = true
thiserror.workspace = true
axum.workspace = true
tokio.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "time"] }

[lints]
workspace = true
