[package]
name = "firstpass-proxy"
description = "Drop-in, Anthropic-compatible LLM proxy that routes each request to the cheapest model that provably passes a quality gate, escalates on failure, and records a tamper-evident audit trace."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://dshakes.github.io/firstpass"
authors.workspace = true
documentation = "https://docs.rs/firstpass-proxy"
keywords = ["llm", "proxy", "routing", "anthropic", "ai"]
categories = ["web-programming::http-server", "command-line-utilities"]

[[bin]]
name = "firstpass-proxy"
path = "src/main.rs"

# The unified CLI: `firstpass up | doctor | trace`.
[[bin]]
name = "firstpass"
path = "src/bin/firstpass.rs"

[dependencies]
futures-core = "0.3"
firstpass-core.workspace = true
serde.workspace = true
serde_json.workspace = true
jiff.workspace = true
uuid.workspace = true
thiserror.workspace = true
aes-gcm.workspace = true
hex.workspace = true
argon2.workspace = true
axum.workspace = true
tokio.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true
async-trait.workspace = true
tower.workspace = true
governor.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
aws-sigv4.workspace = true
aws-credential-types.workspace = true
aws-smithy-runtime-api.workspace = true
gcp_auth.workspace = true
http.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "time"] }

[lints]
workspace = true
